Fix calendar overflowing to multiple pages in some cases

--- a/sass/calendar.scss
+++ b/sass/calendar.scss
@@ -44,8 +44,8 @@ body {
 	justify-content: center;
 	align-items: flex-start;
 	gap: 5mm;
-	margin-top: 3mm;
-	margin-bottom: -5mm;
+	// margin-top: 3mm;
+	margin-bottom: -7mm;
 	line-height: 1;
 	font-family: "Univers", var(--font-industrial);
 
@@ -70,7 +70,7 @@ body {
 
 		#progress-bar-wrapper {
 			flex: 1;
-			margin-top: 3mm;
+			margin-top: 2mm;
 			border-top: var(--border-width) solid black;
 			border-bottom: var(--border-width) solid black;
 			padding: 1mm 0;
@@ -119,7 +119,7 @@ body {
 				". . . . .";
 			grid-auto-flow: row;
 			gap: 1mm;
-			margin-top: 3mm;
+			margin-top: 2mm;
 			width: fit-content;
 			height: fit-content;
 			// margin-left: auto;
